--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -11,3 +11,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+
+server {
+    listen 80 default_server;
+    send_timeout 120;
+    add_header Cache-Control no-cache;
+
+    location /healthcheck {
+      empty_gif;
+      break;
+    }
+}
