--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -6,7 +6,11 @@ server {
         resolver {{ $.Env.RESOLVER_IP }}{{ if $.Env.RESOLVER_VALID_SEC }} valid={{ $.Env.RESOLVER_VALID_SEC }}s{{ end }};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto {{ $.Env.X_FORWARDED_PROTO }};
+        set $var_forwarded_proto  {{ $.Env.X_FORWARDED_PROTO }};
+        if ($http_x_forwarded_proto) {
+          set $var_forwarded_proto  $http_x_forwarded_proto;
+        }
+        proxy_set_header X-Forwarded-Proto $var_forwarded_proto;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         {{ if $.Env.TO_HOST }}
         proxy_pass http://$subdomain.{{ $.Env.TO_HOST }};
