--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -2,6 +2,20 @@ server {
     listen 80;
     server_name ~^(?P<subdomain>.+)\.{{ $.Env.FROM_HOST_REGEXP }}$;
 
+    gzip  on;
+    gzip_proxied  any;
+    gzip_vary  on;
+    gzip_min_length 500;
+    gzip_types  text/plain
+                text/css
+                text/xml
+                application/javascript
+                application/json
+                image/svg+xml;
+    gzip_comp_level 6;
+
+    server_tokens off;
+
     set $proxy_proto "";
     if ($http_x_forwarded_proto != "") {
         set $proxy_proto $http_x_forwarded_proto;
